fix addres text alignment

--- a/style/layout/_contact.scss
+++ b/style/layout/_contact.scss
@@ -101,6 +101,7 @@
 
 .contact-info {
   color: $colorDark;
+  text-align: right;
 
   @media (max-width: 690px) {
     width: 280px;
@@ -137,6 +138,11 @@
     white-space: pre-line;
     max-width: 300px;
     line-height: 1.5;
+    text-align: inherit;
+
+    p {
+      margin: 0;
+    }
 
     @include mobile {
       display: inline-block;
